# ecommerce-homework

./: .gitignore  README.md  data.json  main.py  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_category_py.html  z_145eef247bfb46b6_order_py.html  z_145eef247bfb46b6_product_py.html  z_145eef247bfb46b6_utils_py.html
src/: category.py  main.py  order.py  product.py  utils.py
tests/: test_category.py  test_main.py  test_order.py  test_product.py  test_products.json  test_utils.py
