[tool.poetry]
name = "ecommerce-homework"
version = "0.1.0"
description = "Core functionality for e-commerce homework 14.1."
authors = ["Vladimir Ianioglo <your.skypromd@gmail.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^5.0.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
mypy = "^1.11.2"
pandas-stubs = "^2.2.2.240603"
types-requests = "^2.32.0"  # Исправленная версия

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 120
exclude = [
    ".git",
    "__pycache__",
    "venv",
]